# android-walking-recorder

./: accelerometertest.kv  buildozer.spec  pyproject.toml  test.py  testapp.kv
